<resources>
  <string name="app_name">Seouling</string>
  <string name="title_base">Module Title</string>
  <string name="just_now">Now</string>
  <string name="facebook_app_id">378806722801799</string>
  <string name="fb_login_protocol_scheme">fb378806722801799</string>
  <string name="login_email">Sign in with email</string>
  <string name="already_sign_up"Already a member?</string>
  <string name="login">Sign In</string>
  <string name="email">Email address</string>
  <string name="password">Password</string>
  <string name="sign_up">Create an account</string>
  <string name="nickname">Nickname</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="next">Next</string>
  <string name="plan_date">%s ~ %s</string>
  <string name="morning">Morning</string>
  <string name="launch">Afternoon</string>
  <string name="night">Night</string>
  <string name="complete">Done!</string>
  <string name="logout">Sign Out</string>
  <string name="good">Like</string>
  <string name="my_seoul">My Seoul</string>
  <string name="spot_detail_star_description">Rate your visit_Share your thought and experience with others about this place!</string>
  <string name="review">Review</string>
  <string name="travel_plan">My Trip 혹은 Trip Planner 둘중하나골라쓰세요</string>
