<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:text="@string/sign_up"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <View
      android:id="@+id/profile"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginTop="120dp"
      android:background="@drawable/ic_round_profile"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <View
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:background="@drawable/ic_plus"
      app:layout_constraintBottom_toBottomOf="@id/profile"
      app:layout_constraintEnd_toEndOf="@id/profile" />

    <EditText
      android:id="@+id/inputNickname"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="70dp"
      android:layout_marginStart="70dp"
      android:layout_marginTop="30dp"
      android:hint="@string/nickname"
      android:textColor="@color/hintColor"
      android:textColorHint="@color/hintColor"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/profile" />

    <EditText
      android:id="@+id/inputEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="70dp"
      android:layout_marginStart="70dp"
      android:layout_marginTop="30dp"
      android:hint="@string/email"
      android:textColor="@color/hintColor"
      android:textColorHint="@color/hintColor"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputNickname" />

    <EditText
      android:id="@+id/inputPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="70dp"
      android:layout_marginStart="70dp"
      android:layout_marginTop="30dp"
      android:hint="@string/password"
      android:textColor="@color/hintColor"
      android:textColorHint="@color/hintColor"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <EditText
      android:id="@+id/inputConfirmedPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="70dp"
      android:layout_marginStart="70dp"
      android:layout_marginTop="30dp"
      android:hint="@string/confirm_password"
      android:textColor="@color/hintColor"
      android:textColorHint="@color/hintColor"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <TextView
      android:id="@+id/next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="160dp"
      android:layout_marginTop="50dp"
      android:background="@drawable/bg_round_next"
      android:paddingBottom="10dp"
      android:paddingEnd="120dp"
      android:paddingStart="120dp"
      android:paddingTop="10dp"
      android:text="@string/next"
      android:textColor="@color/white"
      android:textColorHint="@color/hintColor"
      android:textSize="17sp"
      android:textStyle="bold"
      app:elevation="3dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputConfirmedPassword"
      app:layout_constraintVertical_bias="0" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>