<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/carrier"
    android:layout_width="84dp"
    android:layout_height="160dp"
    android:layout_marginTop="150dp"
    android:src="@drawable/carrier_white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/logoDivider"
    android:layout_width="146dp"
    android:layout_height="1dp"
    android:background="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/carrier" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="33dp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logoDivider" />

  <com.facebook.login.widget.LoginButton
    android:id="@+id/facebookLoginButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="200dp"
    android:layout_marginEnd="80dp"
    android:layout_marginStart="80dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/emailSignUp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="80dp"
    android:layout_marginStart="80dp"
    android:layout_marginTop="8dp"
    android:background="#00b7ff"
    android:drawablePadding="35dp"
    android:drawableStart="@drawable/ic_email"
    android:paddingBottom="8dp"
    android:paddingEnd="79dp"
    android:paddingStart="9dp"
    android:paddingTop="8dp"
    android:text="@string/login_email"
    android:textColor="@color/white"
    android:textSize="12sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/facebookLoginButton" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/emailSignUp">

    <TextView
      android:id="@+id/already"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_sign_up"
      android:textColor="@color/white"
      android:textSize="12sp" />

    <TextView
      android:id="@+id/emailLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="7dp"
      android:text="@string/login"
      android:textColor="@color/white"
      android:textSize="13sp"
      android:textStyle="bold" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>